1.6
V4.0.5: Added Compressed common materials, cobble, dirt, sand, gravel(still coding)
V4.0.4: Updated to 1.6.4. Fixed hardness on curtains(whoops xD). Used new name mappings for 1.6 stuff.
V4.0.3: Added a bit of info to the Version checker. Added a config to disable it checking, disable in the config. Added config to enable/disable redstone lamp colors, also added redstone lamps with colors(some colors missing(if you wish to finish/redo them, please let me know). Added recipes to craft the nametag(why is that a dungeon loot item?), iron, gold, diamond horse armor, cause i can, can disable in the config. Added a hidden trap door, will grab texture of the block placed on(should work for all mod blocks). Added Curtains that will take the texture of the block you use on them(some blocks wont work). To make them, similiar to door with any wools, makes the e-w, put it in the crafting table to make n-w, and it in the table to make it back to the e-w curtain.
V4.0.2: Fixed a name issue with rubber blocks. Added a Lapis brick for current lapis block. Added another light source, Stone Trimmed Glowstone. Added marble/black marble stairs using single id for each(config option disables/enables all).
V4.0.1: Fixed a config issue breaking McUpdater. Made blaze rod storage and coal storage items burnable for the item x 9 ticks. Removed recipe to make coal storage item for 1.6's coal block(will remove fully soon). Added a version checker(will check to see if version is old, if so, says so). Added Old Lapis block with brick texture, new lapis with brick texture(id had to shift, sorry).