@@ -24,7 +24,7 @@ import cpw.mods.fml.relauncher.SideOnly;
 public class CompressBlocks extends Block {
 	public CompressBlocks(int id) {
 		super(id, Material.rock);
-		setResistance(10.0F);
+		setResistance(2.0F);
 		setCreativeTab(vanityblocks.VanityBlocks.tabCustom);
 	}
 	@Override
@@ -37,17 +37,23 @@ public class CompressBlocks extends Block {
 		if (metadata == 2)
 			return 2f;
 		if (metadata == 3)
-			return .8f;
+			return .5f;
 		if (metadata == 4)
-			return .8f;
+			return .5f;
 		if (metadata == 5)
-			return .8f;
+			return .5f;
 		if (metadata == 6)
-			return .8f;
+			return .5f;
 		if (metadata == 7)
-			return .8f;
+			return .5f;
 		if (metadata == 8)
-			return .8f;
+			return .5f;
+		if (metadata == 9)
+			return .5f;
+		if (metadata == 10)
+			return .5f;
+		if (metadata == 11)
+			return .5f;
 
 		return 2f;
 	}
@@ -55,7 +61,7 @@ public class CompressBlocks extends Block {
 
 	@Override
 	public void registerIcons(IconRegister par1IconRegister) {
-		iconBuffer = new Icon[3];
+		iconBuffer = new Icon[12];
 
 		iconBuffer[0] = par1IconRegister
 				.registerIcon("vanityblocks:cobble9x");
@@ -63,6 +69,24 @@ public class CompressBlocks extends Block {
 				.registerIcon("vanityblocks:cobble81x");
 		iconBuffer[2] = par1IconRegister
 				.registerIcon("vanityblocks:cobble729x");
+		iconBuffer[3] = par1IconRegister
+				.registerIcon("vanityblocks:dirt9x");
+		iconBuffer[4] = par1IconRegister
+				.registerIcon("vanityblocks:dirt81x");
+		iconBuffer[5] = par1IconRegister
+				.registerIcon("vanityblocks:dirt729x");
+		iconBuffer[6] = par1IconRegister
+				.registerIcon("vanityblocks:sand9x");
+		iconBuffer[7] = par1IconRegister
+				.registerIcon("vanityblocks:sand81x");
+		iconBuffer[8] = par1IconRegister
+				.registerIcon("vanityblocks:sand729x");
+		iconBuffer[9] = par1IconRegister
+				.registerIcon("vanityblocks:gravel9x");
+		iconBuffer[10] = par1IconRegister
+				.registerIcon("vanityblocks:gravel81x");
+		iconBuffer[11] = par1IconRegister
+				.registerIcon("vanityblocks:gravel729x");
 	}
 
 	@Override
@@ -78,6 +102,36 @@ public class CompressBlocks extends Block {
 		if (metadata == 2) {
 			return iconBuffer[2];
 		}
+		if (metadata == 3) {
+			return iconBuffer[3];
+		}
+		if (metadata == 4) {
+			return iconBuffer[4];
+		}
+		if (metadata == 5) {
+			return iconBuffer[5];
+		}
+		if (metadata == 6) {
+			return iconBuffer[6];
+		}
+		if (metadata == 7) {
+			return iconBuffer[7];
+		}
+		if (metadata == 8) {
+			return iconBuffer[8];
+		}
+		if (metadata == 8) {
+			return iconBuffer[8];
+		}
+		if (metadata == 9) {
+			return iconBuffer[9];
+		}
+		if (metadata == 10) {
+			return iconBuffer[10];
+		}
+		if (metadata == 11) {
+			return iconBuffer[11];
+		}
 		return blockIcon;
 	}
 
@@ -88,7 +142,7 @@ public class CompressBlocks extends Block {
 
 	@SideOnly(Side.CLIENT)
 	public void getSubBlocks(int par1, CreativeTabs tab, List subItems) {
-		for (int ix = 0; ix < 3; ix++) {
+		for (int ix = 0; ix < 12; ix++) {
 			subItems.add(new ItemStack(this, 1, ix));
 		}
 	}
