@@ -5,7 +5,7 @@ public class DefaultProps {
 	public static final String FILE_CONFIG = "vanityblocks/VanityBlocks.cfg";
 	public static final int LOCALMAJVERSION = 4;
 	public static final int LOCALMINVERSION = 0;
-	public static final int LOCALBUILDVERSION = 5;
+	public static final int LOCALBUILDVERSION = 6;
 	public static int remoteMajVer;
 	public static int remoteMinVer;
 	public static int remoteBuildVer;
