@@ -19,9 +19,9 @@ public class CompressedRegistrations {
 		CompressBlocks = new CompressBlocks(compressblocksconfig);
 
 		String[] randomblocknames = { "9X Compressed CobblesStone", "81X Compressed CobblesStone",
-				"729X Compressed CobblesStone", "",
-				"", "", "", "", "", "", "",
-				"" };
+				"729X Compressed CobblesStone", "9X Compressed Dirt", "81X Compressed Dirt",
+				"729X Compressed Dirt", "9X Compressed Sand", "81X Compressed Sand", "729X Compressed Sand", "9X Compressed Gravel",
+				"81X Compressed Gravel", "729X Compressed Gravel", "", "", "", "" };
 		/* ##### Vannila ##### */
 		GameRegistry.registerBlock(CompressBlocks,
 				vanityblocks.ItemBlocks.CompressItemBlock.class,
@@ -32,10 +32,29 @@ public class CompressedRegistrations {
 				"81X Compressed CobbleStone");
 		LanguageRegistry.addName(new ItemStack(CompressBlocks, 1, 2),
 				"729X Compressed CobbleStone");
+		LanguageRegistry.addName(new ItemStack(CompressBlocks, 1, 3),
+				"9X Compressed Dirt");
+		LanguageRegistry.addName(new ItemStack(CompressBlocks, 1, 4),
+				"81X Compressed Dirt");
+		LanguageRegistry.addName(new ItemStack(CompressBlocks, 1, 5),
+				"729X Compressed Dirt");
+		LanguageRegistry.addName(new ItemStack(CompressBlocks, 1, 6),
+				"9X Compressed Sand");
+		LanguageRegistry.addName(new ItemStack(CompressBlocks, 1, 7),
+				"81X Compressed Sand");
+		LanguageRegistry.addName(new ItemStack(CompressBlocks, 1, 8),
+				"729X Compressed Sand");
+		LanguageRegistry.addName(new ItemStack(CompressBlocks, 1, 9),
+				"9X Compressed Gravel");
+		LanguageRegistry.addName(new ItemStack(CompressBlocks, 1, 10),
+				"81X Compressed Gravel");
+		LanguageRegistry.addName(new ItemStack(CompressBlocks, 1, 11),
+				"729X Compressed Gravel");
 	}
 
 	public static void addRecipes() {
 		// System.out.println("Random Block Registration loaded");
+		//Cobble 
 		GameRegistry.addRecipe(new ItemStack(CompressBlocks, 1, 0),
 				new Object[] { "xxx", "xxx", "xxx", 'x',
 						new ItemStack(Block.cobblestone) });
@@ -53,6 +72,60 @@ public class CompressedRegistrations {
 						new ItemStack(CompressBlocks, 1, 1) });
 		GameRegistry.addShapelessRecipe(new ItemStack(CompressBlocks, 9, 1),
 				new ItemStack(CompressBlocks, 1, 2));
+		/* Dirt */
+		GameRegistry.addRecipe(new ItemStack(CompressBlocks, 1, 3),
+				new Object[] { "xxx", "xxx", "xxx", 'x',
+						new ItemStack(Block.dirt) });
+		GameRegistry.addShapelessRecipe(new ItemStack(Block.dirt, 9),
+				new ItemStack(CompressBlocks, 1, 3));
+		
+		GameRegistry.addRecipe(new ItemStack(CompressBlocks, 1, 4),
+				new Object[] { "xxx", "xxx", "xxx", 'x',
+						new ItemStack(CompressBlocks, 1, 3) });
+		GameRegistry.addShapelessRecipe(new ItemStack(CompressBlocks, 9, 3),
+				new ItemStack(CompressBlocks, 1, 4));
+		
+		GameRegistry.addRecipe(new ItemStack(CompressBlocks, 1, 5),
+				new Object[] { "xxx", "xxx", "xxx", 'x',
+						new ItemStack(CompressBlocks, 1, 4) });
+		GameRegistry.addShapelessRecipe(new ItemStack(CompressBlocks, 9, 4),
+				new ItemStack(CompressBlocks, 1, 5));
+		/* Sand */
+		GameRegistry.addRecipe(new ItemStack(CompressBlocks, 1, 6),
+				new Object[] { "xxx", "xxx", "xxx", 'x',
+						new ItemStack(Block.sand) });
+		GameRegistry.addShapelessRecipe(new ItemStack(Block.sand, 9),
+				new ItemStack(CompressBlocks, 1, 6));
+		
+		GameRegistry.addRecipe(new ItemStack(CompressBlocks, 1, 7),
+				new Object[] { "xxx", "xxx", "xxx", 'x',
+						new ItemStack(CompressBlocks, 1, 6) });
+		GameRegistry.addShapelessRecipe(new ItemStack(CompressBlocks, 9, 6),
+				new ItemStack(CompressBlocks, 1, 7));
+		
+		GameRegistry.addRecipe(new ItemStack(CompressBlocks, 1, 8),
+				new Object[] { "xxx", "xxx", "xxx", 'x',
+						new ItemStack(CompressBlocks, 1, 7) });
+		GameRegistry.addShapelessRecipe(new ItemStack(CompressBlocks, 9, 7),
+				new ItemStack(CompressBlocks, 1, 8));
+		/* Gravel */
+		GameRegistry.addRecipe(new ItemStack(CompressBlocks, 1, 9),
+				new Object[] { "xxx", "xxx", "xxx", 'x',
+						new ItemStack(Block.gravel) });
+		GameRegistry.addShapelessRecipe(new ItemStack(Block.gravel, 9),
+				new ItemStack(CompressBlocks, 1, 9));
+		
+		GameRegistry.addRecipe(new ItemStack(CompressBlocks, 1, 10),
+				new Object[] { "xxx", "xxx", "xxx", 'x',
+						new ItemStack(CompressBlocks, 1, 9) });
+		GameRegistry.addShapelessRecipe(new ItemStack(CompressBlocks, 9, 9),
+				new ItemStack(CompressBlocks, 1, 10));
+		
+		GameRegistry.addRecipe(new ItemStack(CompressBlocks, 1, 11),
+				new Object[] { "xxx", "xxx", "xxx", 'x',
+						new ItemStack(CompressBlocks, 1, 10) });
+		GameRegistry.addShapelessRecipe(new ItemStack(CompressBlocks, 9, 10),
+				new ItemStack(CompressBlocks, 1, 11));
 		}
 
 	public static Block CompressBlocks;
